--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ body {
   margin-top: 40px;
   background: white;
   border: 2px solid rgb(102, 102, 102);
-  padding: 15px;
+  padding-top: 15px;
 }
 
 #secHead {
@@ -44,4 +44,10 @@ img {
   background:#ef7e51;
   border-color: rgb(102, 102, 102);
   border-width: 2px;
+}
+nav.navbar.navbar-expand-sm.bg-dark.navbar-dark{
+
+  padding-left:20px;
+  padding-right:20px;
+
 }
